Updated meta data

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,11 @@
     <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="google-site-verification" content="kQykRnjKuNndn9_ykXeHsmzrTXjld3QdVnXieuhXw50" />
+    <meta name="description" content="Experienced Engineering Team Leader with a demonstrated history of working in the automotive industry. Skilled in Electrical Engineering, Leadership, Test Automation and Manufacturing Design. Fluent in English with professional working proficiency in French. Strong engineering professional working towards a Bachelor Technology – B.Tech focused in Power & Energy Engineering from McMaster University.." />
+    <meta name="keywords" content="Jessie Boudreau MAC Formula Electric Racing FSAE Mcmaster University"/>
+    <meta name="robots" content="all" />
+
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
