Email form & updated project pages

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,13 @@
     <meta name="robots" content="all" />
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-
+    <!-- Google ReCaptcha -->
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+      function onSubmit(token) {
+        document.getElementById("email-form").submit();
+      }
+    </script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153107581-1"></script>
     <script>
